Use the default Java HttpCLient